the squishening is imminent (wayyy too many lines of code); implemented e2ee, group chats, better UI, mini-app UI, some switches for production servers
